COMPILER DESIGN/Lab 2/y.output
Terminals unused in grammar

   DO
   BREAK
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 enter_cmp_start: /* empty */

   13 compound_statement: LCURL enter_cmp_start statements RCURL
   14                   | LCURL enter_cmp_start RCURL

   15 var_declaration: type_specifier declaration_list SEMICOLON

   16 type_specifier: INT
   17               | FLOAT
   18               | VOID

   19 declaration_list: declaration_list COMMA ID
   20                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   21                 | ID
   22                 | ID LTHIRD CONST_INT RTHIRD

   23 statements: statement
   24           | statements statement

   25 statement: var_declaration
   26          | func_definition
   27          | expression_statement
   28          | compound_statement
   29          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   30          | IF LPAREN expression RPAREN statement
   31          | IF LPAREN expression RPAREN statement ELSE statement
   32          | WHILE LPAREN expression RPAREN statement
   33          | PRINTLN LPAREN ID RPAREN SEMICOLON
   34          | RETURN expression SEMICOLON

   35 expression_statement: SEMICOLON
   36                     | expression SEMICOLON

   37 variable: ID
   38         | ID LTHIRD expression RTHIRD

   39 expression: logic_expression
   40           | variable ASSIGNOP logic_expression

   41 logic_expression: rel_expression
   42                 | rel_expression LOGICOP rel_expression

   43 rel_expression: simple_expression
   44               | simple_expression RELOP simple_expression

   45 simple_expression: term
   46                  | simple_expression ADDOP term

   47 term: unary_expression
   48     | term MULOP unary_expression

   49 unary_expression: ADDOP unary_expression
   50                 | NOT unary_expression
   51                 | factor

   52 factor: variable
   53       | ID LPAREN argument_list RPAREN
   54       | LPAREN expression RPAREN
   55       | CONST_INT
   56       | CONST_FLOAT
   57       | variable INCOP
   58       | variable DECOP

   59 argument_list: arguments
   60              | /* empty */

   61 arguments: arguments COMMA logic_expression
   62          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 30 31
ELSE (259) 31
FOR (260) 29
WHILE (261) 32
DO (262)
BREAK (263)
INT (264) 16
CHAR (265)
FLOAT (266) 17
DOUBLE (267)
VOID (268) 18
RETURN (269) 34
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 33
ADDOP (275) 46 49
MULOP (276) 48
INCOP (277) 57
DECOP (278) 58
RELOP (279) 44
ASSIGNOP (280) 40
LOGICOP (281) 42
NOT (282) 50
LPAREN (283) 6 7 29 30 31 32 33 53 54
RPAREN (284) 6 7 29 30 31 32 33 53 54
LCURL (285) 13 14
RCURL (286) 13 14
LTHIRD (287) 20 22 38
RTHIRD (288) 20 22 38
COMMA (289) 8 9 19 20 61
SEMICOLON (290) 15 33 34 35 36
CONST_INT (291) 20 22 55
CONST_FLOAT (292) 56
ID (293) 6 7 8 10 19 20 21 22 33 37 38 53
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 6 7, on right: 5 26
parameter_list (45)
    on left: 8 9 10 11, on right: 6 8 9
enter_cmp_start (46)
    on left: 12, on right: 13 14
compound_statement (47)
    on left: 13 14, on right: 6 7 28
var_declaration (48)
    on left: 15, on right: 4 25
type_specifier (49)
    on left: 16 17 18, on right: 6 7 8 9 10 11 15
declaration_list (50)
    on left: 19 20 21 22, on right: 15 19 20
statements (51)
    on left: 23 24, on right: 13 24
statement (52)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 23 24 29 30 31
    32
expression_statement (53)
    on left: 35 36, on right: 27 29
variable (54)
    on left: 37 38, on right: 40 52 57 58
expression (55)
    on left: 39 40, on right: 29 30 31 32 34 36 38 54
logic_expression (56)
    on left: 41 42, on right: 39 40 61 62
rel_expression (57)
    on left: 43 44, on right: 41 42
simple_expression (58)
    on left: 45 46, on right: 43 44 46
term (59)
    on left: 47 48, on right: 45 46 48
unary_expression (60)
    on left: 49 50 51, on right: 47 48 49 50
factor (61)
    on left: 52 53 54 55 56 57 58, on right: 51
argument_list (62)
    on left: 59 60, on right: 53
arguments (63)
    on left: 61 62, on right: 59 61


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   16 type_specifier: INT .

    $default  reduce using rule 16 (type_specifier)


State 2

   17 type_specifier: FLOAT .

    $default  reduce using rule 17 (type_specifier)


State 3

   18 type_specifier: VOID .

    $default  reduce using rule 18 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   15 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   21 declaration_list: ID .
   22                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 21 (declaration_list)


State 13

   15 var_declaration: type_specifier declaration_list . SEMICOLON
   19 declaration_list: declaration_list . COMMA ID
   20                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   22 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   19 declaration_list: declaration_list COMMA . ID
   20                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 17

   15 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 15 (var_declaration)


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   22 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   19 declaration_list: declaration_list COMMA ID .
   20                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 19 (declaration_list)


State 23

   13 compound_statement: LCURL . enter_cmp_start statements RCURL
   14                   | LCURL . enter_cmp_start RCURL

    $default  reduce using rule 12 (enter_cmp_start)

    enter_cmp_start  go to state 30


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 31


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 32


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   22 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 22 (declaration_list)


State 29

   20 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 33


State 30

   13 compound_statement: LCURL enter_cmp_start . statements RCURL
   14                   | LCURL enter_cmp_start . RCURL

    IF           shift, and go to state 34
    FOR          shift, and go to state 35
    WHILE        shift, and go to state 36
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 37
    PRINTLN      shift, and go to state 38
    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 42
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    func_definition       go to state 47
    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 9
    statements            go to state 50
    statement             go to state 51
    expression_statement  go to state 52
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 31

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 32

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 61

    $default  reduce using rule 9 (parameter_list)


State 33

   20 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 62


State 34

   30 statement: IF . LPAREN expression RPAREN statement
   31          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 63


State 35

   29 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 64


State 36

   32 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 65


State 37

   34 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 53
    expression         go to state 66
    logic_expression   go to state 55
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 38

   33 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 67


State 39

   49 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable          go to state 68
    unary_expression  go to state 69
    factor            go to state 60


State 40

   50 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable          go to state 68
    unary_expression  go to state 70
    factor            go to state 60


State 41

   54 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 53
    expression         go to state 71
    logic_expression   go to state 55
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 42

   14 compound_statement: LCURL enter_cmp_start RCURL .

    $default  reduce using rule 14 (compound_statement)


State 43

   35 expression_statement: SEMICOLON .

    $default  reduce using rule 35 (expression_statement)


State 44

   55 factor: CONST_INT .

    $default  reduce using rule 55 (factor)


State 45

   56 factor: CONST_FLOAT .

    $default  reduce using rule 56 (factor)


State 46

   37 variable: ID .
   38         | ID . LTHIRD expression RTHIRD
   53 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 72
    LTHIRD  shift, and go to state 73

    $default  reduce using rule 37 (variable)


State 47

   26 statement: func_definition .

    $default  reduce using rule 26 (statement)


State 48

   28 statement: compound_statement .

    $default  reduce using rule 28 (statement)


State 49

   25 statement: var_declaration .

    $default  reduce using rule 25 (statement)


State 50

   13 compound_statement: LCURL enter_cmp_start statements . RCURL
   24 statements: statements . statement

    IF           shift, and go to state 34
    FOR          shift, and go to state 35
    WHILE        shift, and go to state 36
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 37
    PRINTLN      shift, and go to state 38
    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 74
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    func_definition       go to state 47
    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 9
    statement             go to state 75
    expression_statement  go to state 52
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 51

   23 statements: statement .

    $default  reduce using rule 23 (statements)


State 52

   27 statement: expression_statement .

    $default  reduce using rule 27 (statement)


State 53

   40 expression: variable . ASSIGNOP logic_expression
   52 factor: variable .
   57       | variable . INCOP
   58       | variable . DECOP

    INCOP     shift, and go to state 76
    DECOP     shift, and go to state 77
    ASSIGNOP  shift, and go to state 78

    $default  reduce using rule 52 (factor)


State 54

   36 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 79


State 55

   39 expression: logic_expression .

    $default  reduce using rule 39 (expression)


State 56

   41 logic_expression: rel_expression .
   42                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 80

    $default  reduce using rule 41 (logic_expression)


State 57

   43 rel_expression: simple_expression .
   44               | simple_expression . RELOP simple_expression
   46 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 81
    RELOP  shift, and go to state 82

    $default  reduce using rule 43 (rel_expression)


State 58

   45 simple_expression: term .
   48 term: term . MULOP unary_expression

    MULOP  shift, and go to state 83

    $default  reduce using rule 45 (simple_expression)


State 59

   47 term: unary_expression .

    $default  reduce using rule 47 (term)


State 60

   51 unary_expression: factor .

    $default  reduce using rule 51 (unary_expression)


State 61

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)


State 62

   20 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 20 (declaration_list)


State 63

   30 statement: IF LPAREN . expression RPAREN statement
   31          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 53
    expression         go to state 84
    logic_expression   go to state 55
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 64

   29 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    expression_statement  go to state 85
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 65

   32 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 53
    expression         go to state 86
    logic_expression   go to state 55
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 66

   34 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 67

   33 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 88


State 68

   52 factor: variable .
   57       | variable . INCOP
   58       | variable . DECOP

    INCOP  shift, and go to state 76
    DECOP  shift, and go to state 77

    $default  reduce using rule 52 (factor)


State 69

   49 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 49 (unary_expression)


State 70

   50 unary_expression: NOT unary_expression .

    $default  reduce using rule 50 (unary_expression)


State 71

   54 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 89


State 72

   53 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    $default  reduce using rule 60 (argument_list)

    variable           go to state 68
    logic_expression   go to state 90
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60
    argument_list      go to state 91
    arguments          go to state 92


State 73

   38 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 53
    expression         go to state 93
    logic_expression   go to state 55
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 74

   13 compound_statement: LCURL enter_cmp_start statements RCURL .

    $default  reduce using rule 13 (compound_statement)


State 75

   24 statements: statements statement .

    $default  reduce using rule 24 (statements)


State 76

   57 factor: variable INCOP .

    $default  reduce using rule 57 (factor)


State 77

   58 factor: variable DECOP .

    $default  reduce using rule 58 (factor)


State 78

   40 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 68
    logic_expression   go to state 94
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 79

   36 expression_statement: expression SEMICOLON .

    $default  reduce using rule 36 (expression_statement)


State 80

   42 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 68
    rel_expression     go to state 95
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 81

   46 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable          go to state 68
    term              go to state 96
    unary_expression  go to state 59
    factor            go to state 60


State 82

   44 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 68
    simple_expression  go to state 97
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 83

   48 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable          go to state 68
    unary_expression  go to state 98
    factor            go to state 60


State 84

   30 statement: IF LPAREN expression . RPAREN statement
   31          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 85

   29 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    expression_statement  go to state 100
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 86

   32 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 101


State 87

   34 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 34 (statement)


State 88

   33 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 102


State 89

   54 factor: LPAREN expression RPAREN .

    $default  reduce using rule 54 (factor)


State 90

   62 arguments: logic_expression .

    $default  reduce using rule 62 (arguments)


State 91

   53 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 103


State 92

   59 argument_list: arguments .
   61 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 104

    $default  reduce using rule 59 (argument_list)


State 93

   38 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 105


State 94

   40 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 40 (expression)


State 95

   42 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 42 (logic_expression)


State 96

   46 simple_expression: simple_expression ADDOP term .
   48 term: term . MULOP unary_expression

    MULOP  shift, and go to state 83

    $default  reduce using rule 46 (simple_expression)


State 97

   44 rel_expression: simple_expression RELOP simple_expression .
   46 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 81

    $default  reduce using rule 44 (rel_expression)


State 98

   48 term: term MULOP unary_expression .

    $default  reduce using rule 48 (term)


State 99

   30 statement: IF LPAREN expression RPAREN . statement
   31          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 34
    FOR          shift, and go to state 35
    WHILE        shift, and go to state 36
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 37
    PRINTLN      shift, and go to state 38
    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    func_definition       go to state 47
    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 9
    statement             go to state 106
    expression_statement  go to state 52
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 100

   29 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 53
    expression         go to state 107
    logic_expression   go to state 55
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 101

   32 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 34
    FOR          shift, and go to state 35
    WHILE        shift, and go to state 36
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 37
    PRINTLN      shift, and go to state 38
    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    func_definition       go to state 47
    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 9
    statement             go to state 108
    expression_statement  go to state 52
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 102

   33 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 109


State 103

   53 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 53 (factor)


State 104

   61 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    variable           go to state 68
    logic_expression   go to state 110
    rel_expression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    unary_expression   go to state 59
    factor             go to state 60


State 105

   38 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 38 (variable)


State 106

   30 statement: IF LPAREN expression RPAREN statement .
   31          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 111

    $default  reduce using rule 30 (statement)


State 107

   29 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 112


State 108

   32 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 32 (statement)


State 109

   33 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 33 (statement)


State 110

   61 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 61 (arguments)


State 111

   31 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 34
    FOR          shift, and go to state 35
    WHILE        shift, and go to state 36
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 37
    PRINTLN      shift, and go to state 38
    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    func_definition       go to state 47
    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 9
    statement             go to state 113
    expression_statement  go to state 52
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 112

   29 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 34
    FOR          shift, and go to state 35
    WHILE        shift, and go to state 36
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 37
    PRINTLN      shift, and go to state 38
    ADDOP        shift, and go to state 39
    NOT          shift, and go to state 40
    LPAREN       shift, and go to state 41
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 43
    CONST_INT    shift, and go to state 44
    CONST_FLOAT  shift, and go to state 45
    ID           shift, and go to state 46

    func_definition       go to state 47
    compound_statement    go to state 48
    var_declaration       go to state 49
    type_specifier        go to state 9
    statement             go to state 114
    expression_statement  go to state 52
    variable              go to state 53
    expression            go to state 54
    logic_expression      go to state 55
    rel_expression        go to state 56
    simple_expression     go to state 57
    term                  go to state 58
    unary_expression      go to state 59
    factor                go to state 60


State 113

   31 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 31 (statement)


State 114

   29 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 29 (statement)
